--- a/Project/Oursourcing_HRM/web/login.html
+++ b/Project/Oursourcing_HRM/web/login.html
@@ -9,9 +9,31 @@ and open the template in the editor.
         <title>Login</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width">
+        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css"/>
+
     </head>
     <body>
-        <h1>Login</h1>
-        <h2>Thich gi viet di</h2>
+        <form action="index.html" class="login">
+            <h1>Login</h1>            
+            <input type="text" name="username" class="login-input" placeholder="Username" autofocus>
+            <input type="text" name="password" class="login-input" placeholder="Password">
+            <input type="submit" value="Login" class="login-submit">
+            <table style="width: 100%">
+                <tr>
+                    <td><div class="checkbox">
+                            <div style="text-align: left"><label><input type="checkbox" value=""><font color = "white" size = "2" >Stay logged in</font></label></div>
+                        </div>
+                    </td>
+                    <td style="">
+                        <div style="text-align: right"><a href="index.html"><font color = "white" size = "2" >Forgot password?</font></a></div>
+                    </td>
+                </tr>
+            </table>
+<!--            <div class="checkbox">
+                <p style="text-align: left"><label><input type="checkbox" value=""><font color = "white">Stay logged in</font></label></p>
+            </div>
+            <p class="login-help"><a href="index.html">Forgot password?</a></p>-->
+        </form>        
     </body>
 </html>
